--- a/templates/base.html
+++ b/templates/base.html
@@ -249,11 +249,11 @@
 							<div class="footer">
 								<h3 class="footer-title">Информация</h3>
 								<ul class="footer-links">
-									<li><a href="#">Глачная</a></li>
-									<li><a href="#">Контакты</a></li>
-									<li><a href="#">О Нас</a></li>
-									<li><a href="#">Корзина</a></li>
-									<li><a href="#">Личный кабинет</a></li>
+									<li><a href="/">Глачная</a></li>
+									<li><a href="{% url 'shop:contact' %}">Контакты</a></li>
+									<li><a href="{% url 'shop:about' %}">О Нас</a></li>
+									<li><a href="{% url 'shop:cart' %}">Корзина</a></li>
+									<li><a href="{% url 'shop:about' %}">Личный кабинет</a></li>
 								</ul>
 							</div>
 						</div>
