--- a/shop/templates/shop/order.html
+++ b/shop/templates/shop/order.html
@@ -45,6 +45,14 @@
                             <input type="date" name="date" id="id_date" class="form-control">
                         </div>
                         <div class="form-group">
+                            <label for="buying_type">Способ доставки </label>
+                            <select class="custom-select mr-sm-2" name="buying_type" id="id_buying_type">
+                                <option selected>...</option>
+                                <option value="1">Самовывоз</option>
+                                <option value="2">Доставка</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
                             <label for="address">Адрес доставки</label>
                             <input type="text" name="address" id="id_address" class="form-control" placeholder="{{ form.address.label }}">
                             <span class="help text">{{ form.address.help_text }}</span>
