--- a/shop/templates/shop/order.html
+++ b/shop/templates/shop/order.html
@@ -48,8 +48,8 @@
                             <label for="buying_type">Способ доставки </label>
                             <select class="custom-select mr-sm-2" name="buying_type" id="id_buying_type">
                                 <option selected>...</option>
-                                <option value="1">Самовывоз</option>
-                                <option value="2">Доставка</option>
+                                <option value="self">Самовывоз</option>
+                                <option value="delivery">Доставка</option>
                             </select>
                         </div>
                         <div class="form-group">
