--- a/shop/templates/shop/product.html
+++ b/shop/templates/shop/product.html
@@ -17,9 +17,11 @@
 {% block main %}
     <h2>{{ product.title }}</h2>
     <img src="{{ product.image.url }}" alt="" style="width:200px">
-    <a href="{% url 'shop:add_to_cart' product_slug=product.slug %}" class='add_to_cart' data-slug="{{ product.slug }}"><button>Добавить в корзину</button></a>
-
-
+    {% if request.user.is_authenticated %}
+        <a href="{% url 'shop:add_to_cart' product_slug=product.slug %}" class='add_to_cart' data-slug="{{ product.slug }}"><button>Добавить в корзину</button></a>
+    {% else %}
+        <a href="#" class='text-center'>Заказывать товар могут только зарегистрированные пользователи</a>
+    {% endif %}
     <script>
         {#alert("hi")#}
     </script>
