--- a/shop/templates/shop/registration.html
+++ b/shop/templates/shop/registration.html
@@ -16,6 +16,7 @@
     <h2 class="text-center">Регистрация нового пользователя</h2>
     <div class="col-sm-8 col-sm-offset-2">
         <form action='' method="POST">
+            {% csrf_token %}
             {{ form }}
             <input type="submit" class="btn btn-success btn-block" value="Зарегистрироваться">
         </form>
