--- a/shop/templates/shop/product.html
+++ b/shop/templates/shop/product.html
@@ -20,7 +20,8 @@
     {% if request.user.is_authenticated %}
         <a href="{% url 'shop:add_to_cart' product_slug=product.slug %}" class='add_to_cart' data-slug="{{ product.slug }}"><button>Добавить в корзину</button></a>
     {% else %}
-        <a href="#" class='text-center'>Заказывать товар могут только зарегистрированные пользователи</a>
+        <p class='text-center'>Заказывать товар могут только зарегистрированные пользователи
+        <a href="{% url 'shop:login' %}" class='text-center'>Войдите</a> или <a href="{% url 'shop:registration' %}" class='text-center'>зарегистрируйтесь</a></p>
     {% endif %}
     <script>
         {#alert("hi")#}
