--- a/shop/templates/shop/account.html
+++ b/shop/templates/shop/account.html
@@ -34,6 +34,8 @@
     </tr>
     {% endfor %}
     </table>
+
+    <a href='{% url 'shop:logout' %}'><button type="button" class="btn btn-danger">Выход</button></a>
 {% endblock %}
 
 {% block sidebar %}
