--- a/shop/templates/shop/order.html
+++ b/shop/templates/shop/order.html
@@ -41,6 +41,10 @@
                             <span class="helptext">Номер телефона в формате +79011234567</span>
                         </div>
                         <div class="form-group">
+                            <label for="email">Электронная почта</label>
+                            <input type="text" name="email" required id="id_email" class="form-control" placeholder="{{ form.email.label }}">
+                        </div>
+                        <div class="form-group">
                             <label for="date">Дата доставки</label>
                             <input type="date" name="date" id="id_date" class="form-control">
                         </div>
