--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -17,7 +17,6 @@
         <div class="container">
             <!-- row -->
             <div class="row">
-                {# <div><h2>Наш ассортимент:</h2></div>#}
                 {% for category in categories %}
                     <!-- shop -->
                     <div class="col-md-4 col-xs-6">
@@ -71,7 +70,7 @@
                                             <h4 class="product-price">{{ product.price }} руб.</h4>
                                         </div>
                                         <div class="add-to-cart">
-                                            <a href="{% url 'shop:add_to_cart' product_slug=product.slug %}"><button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> купить</button>
+                                            <a href="{% url 'shop:add_to_cart' product_slug=product.slug %}"><button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> купить</button></a>
                                         </div>
                                     </div>
                                 </div>
