--- a/templates/base.html
+++ b/templates/base.html
@@ -259,7 +259,7 @@
 									<li><a href="{% url 'shop:contact' %}">Контакты</a></li>
 									<li><a href="{% url 'shop:about' %}">О Нас</a></li>
 									<li><a href="{% url 'shop:cart' %}">Корзина</a></li>
-									<li><a href="{% url 'shop:about' %}">Личный кабинет</a></li>
+									<li><a href="{% url 'shop:account' %}">Личный кабинет</a></li>
 								</ul>
 							</div>
 						</div>
