--- a/shop/templates/shop/registration.html
+++ b/shop/templates/shop/registration.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block breadcrumb %}
-    <li><a href="{% url 'shop:registration' %}">Контакты</a></li>
+    <li><a href="{% url 'shop:registration' %}">Регистрация</a></li>
 {% endblock %}
 
 {% block main %}
