--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,7 @@
  		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
  		<![endif]-->
 
+        <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
     </head>
 	<body>
 		<!-- HEADER -->
